--- a/app/js/scss/_feature.scss
+++ b/app/js/scss/_feature.scss
@@ -1,9 +1,14 @@
-.feature{
+.feature {
     background-color: $lightGrayishBlue;
+    text-align: center;
 
-    margin-bottom: 3.75rem;
+    @include breakpoint-up(medium){
+        text-align: left;
+        
+    }
 
     &__intro {
+        margin-bottom: 3.75rem;
         @include breakpoint-up(large){
             width: 60%;
         }
