--- a/app/js/scss/_header.scss
+++ b/app/js/scss/_header.scss
@@ -1,4 +1,6 @@
 .header {
+    position: relative;
+    z-index: 1;
 
     &.open { //Hamburger open styles
 
@@ -82,6 +84,7 @@
             position: relative;
             font-size: $font-sm;
             color: $grayishBlue;
+            transition: color 300ms ease-in-out;
 
             &:not(:last-child) { //as long as it is not last child 
                 margin-right: 32px;
